# rust-bmp

./: .frigg.yaml  .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  index.html  search-index.js
bmp/: enum.BmpErrorKind.html  fn.open.html  index.html  macro.px!.html  sidebar-items.js  stability.html  stability.json  struct.BmpError.html  struct.Image.html  struct.ImageIndex.html  struct.Pixel.html  type.BmpResult.html
bmp/consts/: constant.ALICE_BLUE.html  constant.ANTIQUE_WHITE.html  constant.AQUA.html  constant.AQUAMARINE.html  constant.AZURE.html  constant.BEIGE.html  constant.BISQUE.html  constant.BLACK.html  constant.BLANCHED_ALMOND.html  constant.BLUE.html  constant.BLUE_VIOLET.html  constant.BROWN.html  constant.BURLYWOOD.html  constant.CADET_BLUE.html  constant.CHARTREUSE.html  constant.CHOCOLATE.html  constant.CORAL.html  constant.CORNFLOWER_BLUE.html  constant.CORNSILK.html  constant.CRIMSON.html  constant.CYAN.html  constant.DARK_BLUE.html  constant.DARK_CYAN.html  constant.DARK_GOLDENROD.html  constant.DARK_GRAY.html  constant.DARK_GREEN.html  constant.DARK_GREY.html  constant.DARK_KHAKI.html  constant.DARK_MAGENTA.html  constant.DARK_OLIVE_GREEN.html  constant.DARK_ORANGE.html  constant.DARK_ORCHID.html  (+117 more)
byteorder/: enum.BigEndian.html  enum.Error.html  enum.LittleEndian.html  index.html  sidebar-items.js  stability.html  stability.json  trait.ByteOrder.html  trait.ReadBytesExt.html  trait.WriteBytesExt.html  type.NativeEndian.html  type.Result.html
examples/: gradient.rs
src/: bmp.rs  consts.rs  decoder.rs  encoder.rs  lib.rs
(+23 files in other folders)
