[package]

name = "bmp"
version = "0.2.0"
authors = ["Sondre Lefsaker"]

description = "Small library for reading and writing BMP images in Rust."
documentation = "http://sondrele.github.io/rust-bmp/bmp/index.html"
repository = "https://github.com/sondrele/rust-bmp.git"
homepage = "https://github.com/sondrele/rust-bmp"

license = "MIT"
readme = "README.md"

keywords = ["bmp", "image"]

exclude = ["test"]

[dependencies]
byteorder = "^1.0.0"
